<resources>
    <string name="About.appName.android">Fchwallet</string>
    <string name="About.blog">Blog</string>
    <string name="About.footer">Made by the global FCH team. Version %1$s Build %2$s</string>
    <string name="About.privacy">Privacy Policy</string>
    <string name="About.reddit">Reddit</string>
    <string name="About.terms">Terms of Use</string>
    <string name="About.title">About</string>
    <string name="About.twitter">Twitter</string>
    <string name="About.walletID">FCH Rewards ID</string>
    <string name="AccessibilityLabels.close">Close</string>
    <string name="AccessibilityLabels.faq">Support Center</string>
    <string name="Account.balance">Balance</string>
    <string name="Account.delistedToken">This token has been delisted because the issuer decided to cease ERC20 support. \n\nYou may still be able to send these tokens to another platform. For more details, visit our support page.</string>
    <string name="Account.exchangeRate">%1$s per %2$s</string>
    <string name="Account.loadingMessage">Loading Wallet</string>
    <string name="AccountHeader.defaultWalletName">My FCH</string>
    <string name="Alert.customKeyboard.android">It looks like you are using a third-party keyboard, which can record what you type and steal your Paper Key. Please switch to the default Android keyboard for extra protection.</string>
    <string name="Alert.error">Error</string>
    <string name="Alert.keystore.generic.android">There is a problem with your Android OS keystore, please contact support@brd.com</string>
    <string name="Alert.keystore.invalidated.android">Your FCH encrypted data was recently invalidated because your Android lock screen was disabled.</string>
    <string name="Alert.keystore.invalidated.uninstall.android">We can\'t proceed because your screen lock settings have been changed (e.g. password was disabled, fingerprints were changed). For security purposes, Android has permanently locked your key store. Therefore, your FCH app data must be wiped by uninstalling.\n\nDon’t worry, your funds are still secure! Reinstall the app and recover your wallet using your paper key.</string>
    <string name="Alert.keystore.invalidated.wipe.android">We can\'t proceed because your screen lock settings have been changed (e.g. password was disabled, fingerprints were changed). For security purposes, Android has permanently locked your key store. Therefore, your FCH app data must be wiped.\n\nDon’t worry, your funds are still secure! Recover your wallet using your paper key.</string>
    <string name="Alert.keystore.title.android">Android Key Store Error</string>
    <string name="Alert.noInternet">No internet connection found. Check your connection and try again.</string>
    <string name="Alert.somethingWentWrong">Something went wrong. Please try again.</string>
    <string name="Alert.timedOut">Request timed out. Check your connection and try again.</string>
    <string name="Alert.warning">Warning</string>
    <string name="Alerts.copiedAddressesHeader">Addresses Copied</string>
    <string name="Alerts.copiedAddressesSubheader">All wallet addresses successfully copied.</string>
    <string name="Alerts.paperKeySet">Paper Key Set</string>
    <string name="Alerts.paperKeySetSubheader">Awesome!</string>
    <string name="Alerts.pinSet">PIN Set</string>
    <string name="Alerts.sendFailure">Send failed</string>
    <string name="Alerts.sendSuccess">Send Confirmation</string>
    <string name="Alerts.sendSuccessSubheader">Money Sent!</string>
    <string name="Alerts.touchIdSucceeded.android">Fingerprint recognized</string>
    <string name="Android.allowFileSystemAccess">Please enable storage permissions in your device settings: \"Settings\" &gt; \"Apps\" &gt; \"FCH\" &gt; \"Permissions\".</string>
    <string name="Android.BCH.welcome.message">Any BCH in your wallet can be accessed through the home screen.</string>
    <string name="Android.screenAlteringMessage">We\'ve detected an app that is incompatible with FCH running on your device. For security reasons, please disable any screen altering or light filtering apps to proceed.</string>
    <string name="Android.screenAlteringTitle">Screen Altering App Detected</string>
    <string name="ApiClient.jsonError">JSON Serialization Error</string>
    <string name="ApiClient.notReady">Wallet not ready</string>
    <string name="ApiClient.tokenError">Unable to retrieve API token</string>
    <string name="BCH.body">Enter a destination BCH address below. All BCH in your wallet at the time of the fork (%1$s) will be sent.</string>
    <string name="BCH.confirmationMessage">Confirm sending %1$s to %2$s</string>
    <string name="BCH.confirmationTitle">Confirmation</string>
    <string name="BCH.genericError">Your account does not contain any BCH, or you received BCH after the fork.</string>
    <string name="BCH.hashCopiedMessage">Transaction ID copied</string>
    <string name="BCH.noAddressError">Please enter an address</string>
    <string name="BCH.paymentProtocolError">Payment Protocol Requests are not supported for BCH transactions</string>
    <string name="BCH.successMessage">BCH was successfully sent.</string>
    <string name="BCH.title">Withdraw BCH</string>
    <string name="BCH.txHashHeader">BCH Transaction ID</string>
    <string name="BitID.approve">Approve</string>
    <string name="BitID.authenticationRequest">%1$s is requesting authentication using your bitcoin wallet</string>
    <string name="BitID.deny">Deny</string>
    <string name="BitID.error">Authentication Error</string>
    <string name="BitID.errorMessage">Please check with the service. You may need to try again.</string>
    <string name="BitID.success">Successfully Authenticated</string>
    <string name="BitID.title">BitID Authentication Request</string>
    <string name="Button.buy">Buy</string>
    <string name="Button.cancel">Cancel</string>
    <string name="Button.confirm">Confirm</string>
    <string name="Button.contactSupport.android">Contact Support</string>
    <string name="Button.continueAction">Continue</string>
    <string name="Button.dismiss">Dismiss</string>
    <string name="Button.done">Done</string>
    <string name="Button.Home">Home</string>
    <string name="Button.ignore">Ignore</string>
    <string name="Button.maybeLater">Maybe Later</string>
    <string name="Button.menu">Menu</string>
    <string name="Button.moreInfo">More info</string>
    <string name="Button.no">No</string>
    <string name="Button.ok">OK</string>
    <string name="Button.openSettings">Open Settings</string>
    <string name="Button.receive">Receive</string>
    <string name="Button.securitySettings.android">Security Settings</string>
    <string name="Button.sell">Sell</string>
    <string name="Button.send">Send</string>
    <string name="Button.settings">Settings</string>
    <string name="Button.setup">Set Up</string>
    <string name="Button.skip">Skip</string>
    <string name="Button.submit">Submit</string>
    <string name="Button.uninstall.android">Uninstall</string>
    <string name="Button.wipe.android">Wipe</string>
    <string name="Button.yes">Yes</string>
    <string name="CameraPlugin.centerInstruction">Center your ID in the box</string>
    <string name="Confirmation.amountLabel">Amount to Send:</string>
    <string name="Confirmation.feeLabel">Network Fee:</string>
    <string name="Confirmation.feeLabelETH">Network Fee (ETH):</string>
    <string name="Confirmation.processingTime">Processing time: This transaction is predicted to complete in %1$s.</string>
    <string name="Confirmation.send">Send</string>
    <string name="Confirmation.title">Confirmation</string>
    <string name="Confirmation.to">To</string>
    <string name="Confirmation.totalLabel">Total Cost:</string>
    <string name="ConfirmPaperPhrase.error">The words entered do not match your paper key. Please try again.</string>
    <string name="ConfirmPaperPhrase.label">To make sure everything was written down correctly, please enter the following words from your paper key.</string>
    <string name="ConfirmPaperPhrase.word">Word #%1$s</string>
    <string name="Crowdsale.agree">Agree</string>
    <string name="Crowdsale.buyButton">Buy Tokens</string>
    <string name="Crowdsale.decline">Decline</string>
    <string name="Crowdsale.resume">Resume Verification</string>
    <string name="Crowdsale.retry">Retry</string>
    <string name="DefaultCurrency.bitcoinLabel">Bitcoin Display Unit</string>
    <string name="DefaultCurrency.rateLabel">Exchange Rate</string>
    <string name="Disabled.title">Wallet disabled</string>
    <string name="Email.address_subject">%1$s Address</string>
    <string name="EME.permissions.accountRequest">Request %1$s account information</string>
    <string name="EME.permissions.callRequest">Request %1$s smart contract call</string>
    <string name="EME.permissions.paymentRequest">Request %1$s payment</string>
    <string name="ErrorMessages.emailUnavailableMessage">This device isn\'t configured to send email with the iOS mail app.</string>
    <string name="ErrorMessages.emailUnavailableTitle">Email Unavailable</string>
    <string name="ErrorMessages.loopingLockScreen.android">FCH can not be authenticated due to a bug in your version of Android. [Please tap here for more information.]</string>
    <string name="ErrorMessages.messagingUnavailableMessage">This device isn\'t configured to send messages.</string>
    <string name="ErrorMessages.messagingUnavailableTitle">Messaging Unavailable</string>
    <string name="ErrorMessages.touchIdFailed.android">Fingerprint not recognized. Please try again.</string>
    <string name="FaceIDSettings.customizeText">You can customize your Face ID spending limit from the %1$s.</string>
    <string name="FaceIDSettings.label">Use your face to unlock your FCH and send money up to a set limit.</string>
    <string name="FaceIDSettings.linkText">Face ID Spending Limit Screen</string>
    <string name="FaceIDSettings.switchLabel">Enable Face ID for FCH</string>
    <string name="FaceIDSettings.title">Face ID</string>
    <string name="FaceIDSettings.unavailableAlertMessage">You have not set up Face ID on this device. Go to Settings-&gt;Face ID &amp; Passcode to set it up now.</string>
    <string name="FaceIDSettings.unavailableAlertTitle">Face ID Not Set Up</string>
    <string name="FaceIDSpendingLimit.title">Face ID Spending Limit</string>
    <string name="FeeSelector.economy">Economy</string>
    <string name="FeeSelector.economyTime">1-24 hours</string>
    <string name="FeeSelector.economyWarning">This option is not recommended for time-sensitive transactions.</string>
    <string name="FeeSelector.estimatedDeliver">Estimated Delivery: %1$s</string>
    <string name="FeeSelector.ethTime">2-5 minutes</string>
    <string name="FeeSelector.priority">Priority</string>
    <string name="FeeSelector.priorityTime">10-30 minutes</string>
    <string name="FeeSelector.regular">Regular</string>
    <string name="FeeSelector.regularTime">1-6 minutes</string>
    <string name="add_cid">Add or Update CID</string>
    <string name="declare_cid">Declare CID</string>
    <string name="choose_address">Address</string>
    <string name="target_address">To</string>
    <string name="amount">Amount</string>
    <string name="nickname">Nickname</string>
    <string name="tag">Tag</string>
    <string name="create">Create</string>
    <string name="balance">Balance</string>
    <string name="signature">Sign</string>
    <string name="transaction_history">Transaction History</string>
    <string name="sign_message">Message</string>
    <string name="verify">Verify</string>
    <string name="format_example">The message must follow the format:\n
        message----address----signature\n
        e.g. freecash----FBJeDGU1wTTaAuqJKERWyE1DLrxnps5sCe----IOZuBx8CqFbYDhiHeXELoqwe/OkHqN/B+kjqmhGdfk9CXfvht9rpXHwSRyCdAt319tDyoK6pOsLt79nn0wTqqA8=
    </string>
</resources>